[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/tiles/tilea4.png" type="Texture" id=1]
[ext_resource path="res://scenes/Tile.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/SpaceMono-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/objects/clone_deco.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/objects/Coin.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/objects/ChestAnimatedSprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Sprites/banner.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 24 )

[sub_resource type="Animation" id=3]
resource_name = "zoom"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Items:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3, 3 ) ]
}

[node name="Tile" type="Node2D"]
script = ExtResource( 2 )

[node name="icon" type="Sprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 1, 0.666667 )
texture = ExtResource( 1 )
vframes = 5
hframes = 8
frame = 14

[node name="NumberLabel" type="Label" parent="."]
margin_left = -32.0
margin_top = 16.0
margin_right = 32.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Items" type="Node2D" parent="."]

[node name="CloneSprite" parent="Items" instance=ExtResource( 4 )]

[node name="Coin" parent="Items" instance=ExtResource( 5 )]
visible = false
itemType = 4

[node name="ChestAnimatedSprite" parent="Items" instance=ExtResource( 6 )]
visible = false

[node name="StartSprite" type="Sprite" parent="Items"]
visible = false
position = Vector2( 8, -12 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 7 )
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/zoom = SubResource( 3 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
